pascalfiles/PascalGrammarParser.js
// Generated from PascalGrammar.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('./antlr4/index');
var PascalGrammarListener = require('./PascalGrammarListener').PascalGrammarListener;
var grammarFileName = "PascalGrammar.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, null, null, null, null, null, null, null,
                     null, null, null, null, null, null, null, null, null,
                     null, null, null, null, null, null, null, null, null,
                     null, null, null, null, null, null, null, null, null,
                     null, null, null, null, null, "'+'", "'-'", "'*'",
                     "'/'", "':='", "','", "';'", "':'", "'='", "'<>'",
                     "'<'", "'<='", "'>='", "'>'", "'('", "')'", "'['",
                     "'(.'", "']'", "'.)'", "'^'", "'@'", "'.'", "'..'",
                     "'{'", "'}'" ];

var symbolicNames = [ null, "AND", "ARRAY", "BEGIN", "BOOLEAN", "CASE",
                      "CHAR", "CHR", "CONST", "DIV", "DO", "DOWNTO", "ELSE",
                      "END", "FILE", "FOR", "FUNCTION", "GOTO", "IF", "IN",
                      "INTEGER", "LABEL", "MOD", "NIL", "NOT", "OF", "OR",
                      "PACKED", "PROCEDURE", "PROGRAM", "REAL", "RECORD",
                      "REPEAT", "SET", "THEN", "TO", "TYPE", "UNTIL", "VAR",
                      "WHILE", "WITH", "PLUS", "MINUS", "STAR", "SLASH",
                      "ASSIGN", "COMMA", "SEMI", "COLON", "EQUAL", "NOT_EQUAL",
                      "LT", "LE", "GE", "GT", "LPAREN", "RPAREN", "LBRACK",
                      "LBRACK2", "RBRACK", "RBRACK2", "POINTER", "AT", "DOT",
                      "DOTDOT", "LCURLY", "RCURLY", "UNIT", "INTERFACE",
                      "USES", "STRING", "IMPLEMENTATION", "TRUE", "FALSE",
                      "WRITE", "READ", "WS", "COMMENT_1", "COMMENT_2", "IDENT",
                      "STRING_LITERAL", "NUM_INT", "NUM_REAL" ];

var ruleNames =  [ "program", "programHeading", "identifier", "block", "usesUnitsPart",
                   "labelDeclarationPart", "label", "constantDefinitionPart",
                   "constantDefinition", "constantChr", "constant", "unsignedNumber",
                   "unsignedInteger", "unsignedReal", "sign", "bool", "string",
                   "typeDefinitionPart", "typeDefinition", "functionType",
                   "procedureType", "type", "simpleType", "scalarType",
                   "subrangeType", "typeIdentifier", "structuredType", "unpackedStructuredType",
                   "stringtype", "arrayType", "typeList", "indexType", "componentType",
                   "recordType", "fieldList", "fixedPart", "recordSection",
                   "variantPart", "tag", "variant", "setType", "baseType",
                   "fileType", "pointerType", "variableDeclarationPart",
                   "variableDeclaration", "procedureAndFunctionDeclarationPart",
                   "procedureOrFunctionDeclaration", "procedureDeclaration",
                   "formalParameterList", "formalParameterSection", "parameterGroup",
                   "identifierList", "constList", "functionDeclaration",
                   "resultType", "statement", "unlabelledStatement", "simpleStatement",
                   "ioStatement", "assignmentStatement", "variable", "expression",
                   "relationaloperator", "simpleExpression", "additiveoperator",
                   "term", "multiplicativeoperator", "signedFactor", "factor",
                   "unsignedConstant", "functionDesignator", "parameterList",
                   "set", "elementList", "element", "procedureStatement",
                   "actualParameter", "parameterwidth", "gotoStatement",
                   "emptyStatement", "empty", "structuredStatement", "compoundStatement",
                   "statements", "conditionalStatement", "ifStatement",
                   "caseStatement", "caseListElement", "repetetiveStatement",
                   "whileStatement", "repeatStatement", "forStatement",
                   "forList", "initialValue", "finalValue", "withStatement",
                   "recordVariableList" ];

function PascalGrammarParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

PascalGrammarParser.prototype = Object.create(antlr4.Parser.prototype);
PascalGrammarParser.prototype.constructor = PascalGrammarParser;

Object.defineProperty(PascalGrammarParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

PascalGrammarParser.EOF = antlr4.Token.EOF;
PascalGrammarParser.AND = 1;
PascalGrammarParser.ARRAY = 2;
PascalGrammarParser.BEGIN = 3;
PascalGrammarParser.BOOLEAN = 4;
PascalGrammarParser.CASE = 5;
PascalGrammarParser.CHAR = 6;
PascalGrammarParser.CHR = 7;
PascalGrammarParser.CONST = 8;
PascalGrammarParser.DIV = 9;
PascalGrammarParser.DO = 10;
PascalGrammarParser.DOWNTO = 11;
PascalGrammarParser.ELSE = 12;
PascalGrammarParser.END = 13;
PascalGrammarParser.FILE = 14;
PascalGrammarParser.FOR = 15;
PascalGrammarParser.FUNCTION = 16;
PascalGrammarParser.GOTO = 17;
PascalGrammarParser.IF = 18;
PascalGrammarParser.IN = 19;
PascalGrammarParser.INTEGER = 20;
PascalGrammarParser.LABEL = 21;
PascalGrammarParser.MOD = 22;
PascalGrammarParser.NIL = 23;
PascalGrammarParser.NOT = 24;
PascalGrammarParser.OF = 25;
PascalGrammarParser.OR = 26;
PascalGrammarParser.PACKED = 27;
PascalGrammarParser.PROCEDURE = 28;
PascalGrammarParser.PROGRAM = 29;
PascalGrammarParser.REAL = 30;
PascalGrammarParser.RECORD = 31;
PascalGrammarParser.REPEAT = 32;
PascalGrammarParser.SET = 33;
PascalGrammarParser.THEN = 34;
PascalGrammarParser.TO = 35;
PascalGrammarParser.TYPE = 36;
PascalGrammarParser.UNTIL = 37;
PascalGrammarParser.VAR = 38;
PascalGrammarParser.WHILE = 39;
PascalGrammarParser.WITH = 40;
PascalGrammarParser.PLUS = 41;
PascalGrammarParser.MINUS = 42;
PascalGrammarParser.STAR = 43;
PascalGrammarParser.SLASH = 44;
PascalGrammarParser.ASSIGN = 45;
PascalGrammarParser.COMMA = 46;
PascalGrammarParser.SEMI = 47;
PascalGrammarParser.COLON = 48;
PascalGrammarParser.EQUAL = 49;
PascalGrammarParser.NOT_EQUAL = 50;
PascalGrammarParser.LT = 51;
PascalGrammarParser.LE = 52;
PascalGrammarParser.GE = 53;
PascalGrammarParser.GT = 54;
PascalGrammarParser.LPAREN = 55;
PascalGrammarParser.RPAREN = 56;
PascalGrammarParser.LBRACK = 57;
PascalGrammarParser.LBRACK2 = 58;
PascalGrammarParser.RBRACK = 59;
PascalGrammarParser.RBRACK2 = 60;
PascalGrammarParser.POINTER = 61;
PascalGrammarParser.AT = 62;
PascalGrammarParser.DOT = 63;
PascalGrammarParser.DOTDOT = 64;
PascalGrammarParser.LCURLY = 65;
PascalGrammarParser.RCURLY = 66;
PascalGrammarParser.UNIT = 67;
PascalGrammarParser.INTERFACE = 68;
PascalGrammarParser.USES = 69;
PascalGrammarParser.STRING = 70;
PascalGrammarParser.IMPLEMENTATION = 71;
PascalGrammarParser.TRUE = 72;
PascalGrammarParser.FALSE = 73;
PascalGrammarParser.WRITE = 74;
PascalGrammarParser.READ = 75;
PascalGrammarParser.WS = 76;
PascalGrammarParser.COMMENT_1 = 77;
PascalGrammarParser.COMMENT_2 = 78;
PascalGrammarParser.IDENT = 79;
PascalGrammarParser.STRING_LITERAL = 80;
PascalGrammarParser.NUM_INT = 81;
PascalGrammarParser.NUM_REAL = 82;

PascalGrammarParser.RULE_program = 0;
PascalGrammarParser.RULE_programHeading = 1;
PascalGrammarParser.RULE_identifier = 2;
PascalGrammarParser.RULE_block = 3;
PascalGrammarParser.RULE_usesUnitsPart = 4;
PascalGrammarParser.RULE_labelDeclarationPart = 5;
PascalGrammarParser.RULE_label = 6;
PascalGrammarParser.RULE_constantDefinitionPart = 7;
PascalGrammarParser.RULE_constantDefinition = 8;
PascalGrammarParser.RULE_constantChr = 9;
PascalGrammarParser.RULE_constant = 10;
PascalGrammarParser.RULE_unsignedNumber = 11;
PascalGrammarParser.RULE_unsignedInteger = 12;
PascalGrammarParser.RULE_unsignedReal = 13;
PascalGrammarParser.RULE_sign = 14;
PascalGrammarParser.RULE_bool = 15;
PascalGrammarParser.RULE_string = 16;
PascalGrammarParser.RULE_typeDefinitionPart = 17;
PascalGrammarParser.RULE_typeDefinition = 18;
PascalGrammarParser.RULE_functionType = 19;
PascalGrammarParser.RULE_procedureType = 20;
PascalGrammarParser.RULE_type = 21;
PascalGrammarParser.RULE_simpleType = 22;
PascalGrammarParser.RULE_scalarType = 23;
PascalGrammarParser.RULE_subrangeType = 24;
PascalGrammarParser.RULE_typeIdentifier = 25;
PascalGrammarParser.RULE_structuredType = 26;
PascalGrammarParser.RULE_unpackedStructuredType = 27;
PascalGrammarParser.RULE_stringtype = 28;
PascalGrammarParser.RULE_arrayType = 29;
PascalGrammarParser.RULE_typeList = 30;
PascalGrammarParser.RULE_indexType = 31;
PascalGrammarParser.RULE_componentType = 32;
PascalGrammarParser.RULE_recordType = 33;
PascalGrammarParser.RULE_fieldList = 34;
PascalGrammarParser.RULE_fixedPart = 35;
PascalGrammarParser.RULE_recordSection = 36;
PascalGrammarParser.RULE_variantPart = 37;
PascalGrammarParser.RULE_tag = 38;
PascalGrammarParser.RULE_variant = 39;
PascalGrammarParser.RULE_setType = 40;
PascalGrammarParser.RULE_baseType = 41;
PascalGrammarParser.RULE_fileType = 42;
PascalGrammarParser.RULE_pointerType = 43;
PascalGrammarParser.RULE_variableDeclarationPart = 44;
PascalGrammarParser.RULE_variableDeclaration = 45;
PascalGrammarParser.RULE_procedureAndFunctionDeclarationPart = 46;
PascalGrammarParser.RULE_procedureOrFunctionDeclaration = 47;
PascalGrammarParser.RULE_procedureDeclaration = 48;
PascalGrammarParser.RULE_formalParameterList = 49;
PascalGrammarParser.RULE_formalParameterSection = 50;
PascalGrammarParser.RULE_parameterGroup = 51;
PascalGrammarParser.RULE_identifierList = 52;
PascalGrammarParser.RULE_constList = 53;
PascalGrammarParser.RULE_functionDeclaration = 54;
PascalGrammarParser.RULE_resultType = 55;
PascalGrammarParser.RULE_statement = 56;
PascalGrammarParser.RULE_unlabelledStatement = 57;
PascalGrammarParser.RULE_simpleStatement = 58;
PascalGrammarParser.RULE_ioStatement = 59;
PascalGrammarParser.RULE_assignmentStatement = 60;
PascalGrammarParser.RULE_variable = 61;
PascalGrammarParser.RULE_expression = 62;
PascalGrammarParser.RULE_relationaloperator = 63;
PascalGrammarParser.RULE_simpleExpression = 64;
PascalGrammarParser.RULE_additiveoperator = 65;
PascalGrammarParser.RULE_term = 66;
PascalGrammarParser.RULE_multiplicativeoperator = 67;
PascalGrammarParser.RULE_signedFactor = 68;
PascalGrammarParser.RULE_factor = 69;
PascalGrammarParser.RULE_unsignedConstant = 70;
PascalGrammarParser.RULE_functionDesignator = 71;
PascalGrammarParser.RULE_parameterList = 72;
PascalGrammarParser.RULE_set = 73;
PascalGrammarParser.RULE_elementList = 74;
PascalGrammarParser.RULE_element = 75;
PascalGrammarParser.RULE_procedureStatement = 76;
PascalGrammarParser.RULE_actualParameter = 77;
PascalGrammarParser.RULE_parameterwidth = 78;
PascalGrammarParser.RULE_gotoStatement = 79;
PascalGrammarParser.RULE_emptyStatement = 80;
PascalGrammarParser.RULE_empty = 81;
PascalGrammarParser.RULE_structuredStatement = 82;
PascalGrammarParser.RULE_compoundStatement = 83;
PascalGrammarParser.RULE_statements = 84;
PascalGrammarParser.RULE_conditionalStatement = 85;
PascalGrammarParser.RULE_ifStatement = 86;
PascalGrammarParser.RULE_caseStatement = 87;
PascalGrammarParser.RULE_caseListElement = 88;
PascalGrammarParser.RULE_repetetiveStatement = 89;
PascalGrammarParser.RULE_whileStatement = 90;
PascalGrammarParser.RULE_repeatStatement = 91;
PascalGrammarParser.RULE_forStatement = 92;
PascalGrammarParser.RULE_forList = 93;
PascalGrammarParser.RULE_initialValue = 94;
PascalGrammarParser.RULE_finalValue = 95;
PascalGrammarParser.RULE_withStatement = 96;
PascalGrammarParser.RULE_recordVariableList = 97;


function ProgramContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PascalGrammarParser.RULE_program;
    return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;

ProgramContext.prototype.programHeading = function() {
    return this.getTypedRuleContext(ProgramHeadingContext,0);
};

ProgramContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};

ProgramContext.prototype.DOT = function() {
    return this.getToken(PascalGrammarParser.DOT, 0);
};

ProgramContext.prototype.INTERFACE = function() {
    return this.getToken(PascalGrammarParser.INTERFACE, 0);
};

ProgramContext.prototype.enterRule = function(listener) {
    if(listener instanceof PascalGrammarListener ) {
        listener.enterProgram(this);
	}
};

ProgramContext.prototype.exitRule = function(listener) {
    if(listener instanceof PascalGrammarListener ) {
        listener.exitProgram(this);
	}
};




PascalGrammarParser.ProgramContext = ProgramContext;

PascalGrammarParser.prototype.program = function() {

    var localctx = new ProgramContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, PascalGrammarParser.RULE_program);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 196;
        this.programHeading();
        this.state = 198;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===PascalGrammarParser.INTERFACE) {
            this.state = 197;
            this.match(PascalGrammarParser.INTERFACE);
        }

        this.state = 200;
        this.block();
        this.state = 201;
        this.match(PascalGrammarParser.DOT);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ProgramHeadingContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PascalGrammarParser.RULE_programHeading;
    return this;
}

ProgramHeadingContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramHeadingContext.prototype.constructor = ProgramHeadingContext;

ProgramHeadingContext.prototype.PROGRAM = function() {
    return this.getToken(PascalGrammarParser.PROGRAM, 0);
};

ProgramHeadingContext.prototype.identifier = function() {
    return this.getTypedRuleContext(IdentifierContext,0);
};

ProgramHeadingContext.prototype.SEMI = function() {
    return this.getToken(PascalGrammarParser.SEMI, 0);
};

ProgramHeadingContext.prototype.LPAREN = function() {
    return this.getToken(PascalGrammarParser.LPAREN, 0);
};

ProgramHeadingContext.prototype.identifierList = function() {
    return this.getTypedRuleContext(IdentifierListContext,0);
};

ProgramHeadingContext.prototype.RPAREN = function() {
    return this.getToken(PascalGrammarParser.RPAREN, 0);
};

ProgramHeadingContext.prototype.UNIT = function() {
    return this.getToken(PascalGrammarParser.UNIT, 0);
};

ProgramHeadingContext.prototype.enterRule = function(listener) {
    if(listener instanceof PascalGrammarListener ) {
        listener.enterProgramHeading(this);
	}
};

ProgramHeadingContext.prototype.exitRule = function(listener) {
    if(listener instanceof PascalGrammarListener ) {
        listener.exitProgramHeading(this);
	}
};




PascalGrammarParser.ProgramHeadingContext = ProgramHeadingContext;

PascalGrammarParser.prototype.programHeading = function() {

    var localctx = new ProgramHeadingContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, PascalGrammarParser.RULE_programHeading);
    var _la = 0; // Token type
    try {
        this.state = 217;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case PascalGrammarParser.PROGRAM:
            this.enterOuterAlt(localctx, 1);
            this.state = 203;
            this.match(PascalGrammarParser.PROGRAM);
            this.state = 204;
            this.identifier();
            this.state = 209;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===PascalGrammarParser.LPAREN) {
                this.state = 205;
                this.match(PascalGrammarParser.LPAREN);
                this.state = 206;
                this.identifierList();
                this.state = 207;
                this.match(PascalGrammarParser.RPAREN);
            }

            this.state = 211;
            this.match(PascalGrammarParser.SEMI);
            break;
        case PascalGrammarParser.UNIT:
            this.enterOuterAlt(localctx, 2);
            this.state = 213;
            this.match(PascalGrammarParser.UNIT);
            this.state = 214;
            this.identifier();
            this.state = 215;
            this.match(PascalGrammarParser.SEMI);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function IdentifierContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PascalGrammarParser.RULE_identifier;
    return this;
}

IdentifierContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IdentifierContext.prototype.constructor = IdentifierContext;

IdentifierContext.prototype.IDENT = function() {
    return this.getToken(PascalGrammarParser.IDENT, 0);
};

IdentifierContext.prototype.enterRule = function(listener) {
    if(listener instanceof PascalGrammarListener ) {
        listener.enterIdentifier(this);
	}
};

IdentifierContext.prototype.exitRule = function(listener) {
    if(listener instanceof PascalGrammarListener ) {
        listener.exitIdentifier(this);
	}
};




PascalGrammarParser.IdentifierContext = IdentifierContext;

PascalGrammarParser.prototype.identifier = function() {

    var localctx = new IdentifierContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, PascalGrammarParser.RULE_identifier);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 219;
        this.match(PascalGrammarParser.IDENT);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function BlockContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PascalGrammarParser.RULE_block;
    return this;
}

BlockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BlockContext.prototype.constructor = BlockContext;

BlockContext.prototype.compoundStatement = function() {
    return this.getTypedRuleContext(CompoundStatementContext,0);
};
